# research-paper-formatter-agent

./: .dockerignore  .gitattributes  .gitignore  AUTHORS.md  Blog.md  Dockerfile  Meta_Final.ipynb  README.md  SUBMISSION_GUIDE.md  __init__.py  client.py  compliance_audit.md  conference_specs.py  corpus.py  environment.py  fix_papers.py  grader.py  inference.py  models.py  openenv.yaml  paper_data.py  pyproject.toml  requirements.txt  server.py  setup.py  tasks.py  train.py  validate-submission.sh  verify_papers.py
assets/: reward_log.csv  reward_log_smoke.csv
data/papers/: paper_001.json  paper_002.json  paper_003.json
data/styles/: ieee.yaml
docs/: HF_GPU_PLAN.md
hf_space/: app.py  index.html
scripts/: colab_smoke_v6.py  deploy_to_hf_space.py  generate_corpus.py  make_saccade_gif.py  plot_scholarenv_figures.py  push_lora_to_hf.py
server/: __init__.py  app.py  bandit.py  citation_verifier.py  curriculum.py  environment.py  paper_generator.py  real_paper_fetcher.py  reward_shaper.py
server/graders/: __init__.py  audit_grader.py  consistency_grader.py  cross_paper_grader.py  formatting_grader.py  prompt_injection_grader.py
tests/: test_all.py  test_environment.py
