[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "scholar-env"
version         = "0.4.0"
description     = "OpenEnv environment for scholarly integrity verification"
readme          = "README.md"
license         = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies    = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
scholar-env-server = "server.app:main"
serve              = "server.app:main"
start              = "server.app:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "server.*"]

[tool.ruff]
line-length = 100
